--- a/docs/algorithm/10大经典排序算法.md
+++ b/docs/algorithm/10大经典排序算法.md
@@ -2,7 +2,7 @@
 
 ## 时间/空间复杂度
 
-![](img/sort_%20complexity.png)
+![](imgs/sort_%20complexity.png)
 
 ## 分类
 
@@ -70,7 +70,7 @@ public static void bubbleSort(int[] arr) {
 2. 开始排序，比基准小的就放到基准的前面，比基准大得就放在基准的后面，相同的可以放在任意一边。一次分区完成后，基准就位于数列的中间。所以这个也称之为`分区(parttion)`操作。
 3. `递归的`把小于基准和大于基准的子数列排序，也就是进行上一步的操作。
 
-![](img/quick_sort.gif)
+![](imgs/quick_sort.gif)
 
 ```java
 
@@ -150,7 +150,7 @@ private static void insertionSort(int[] arr) {
 
 ## 参考文献
 
-https://www.runoob.com/w3cnote/ten-sorting-algorithm.html
+[菜鸟教程](https://www.runoob.com/w3cnote/ten-sorting-algorithm.html)
 
 《大话数据结构》
 
