--- a/docs/C++/02.HelloWrold.md
+++ b/docs/C++/02.HelloWrold.md
@@ -1,3 +1,6 @@
+# HelloWrold
+
+```c++
 //导入库里面头文件
 #include <iostream>
 //使用std的命名空间
@@ -9,3 +12,7 @@ int main(int argc, char const *argv[])
     cout << "hello c++" << endl;
     return 0;
 }
+```
+
+c++同样要以`;`标志每行语句结束
+
