--- a/docs/C++/06.字符串.md
+++ b/docs/C++/06.字符串.md
@@ -1,3 +1,14 @@
+# 字符串
+
+* c-style字符串
+* string类字符串
+
+```c++
+char * str = "abcd";
+char str1[6] = {'H', 'e', 'l', 'l', 'o', '\0'};
+```
+
+```c++
 #include <string>
 #include <iostream>
 
@@ -11,3 +22,4 @@ int main(int argc, char const *argv[])
 
     return 0;
 }
+```
