--- a/docs/算法/10大经典排序算法.md
+++ b/docs/算法/10大经典排序算法.md
@@ -43,7 +43,7 @@ public class Utils {
 
 每次循环后，最大的那个元素就会移动至末尾，所以内存循环次数可以为数组length减去外层循环的当前index。
 
-![冒泡排序](img/bubble_sort.gif)
+![冒泡排序](imgs/bubble_sort.gif)
 
 ```java
 public static void bubbleSort(int[] arr) {
@@ -83,7 +83,7 @@ public static void bubbleSort(int[] arr) {
 1. 将未排序数列的第一个元素看做一个有序序列，从第二个元素到最后一个元素看成未排序序列。
 2. 从头至尾遍历未排序序列，将扫描到的每个元素插入**有序序列**适当的位置。
 
-![](img/insertion_sort.gif)
+![](imgs/insertion_sort.gif)
 
 ```java
 private static void insertionSort(int[] arr) {
@@ -117,7 +117,7 @@ private static void insertionSort(int[] arr) {
 
 2. 重复上一步骤，但是这里的首位或末尾是指不包含上一步已经占坑了的首位或末尾。
 
-![](img/selection_sort.gif)
+![](imgs/selection_sort.gif)
 
 ```java
     private static void selectionSort(int[] arr) {
