--- a/docs/数据结构/参考.md
+++ b/docs/数据结构/参考.md
@@ -2,4 +2,5 @@
 
 * <<大话数据结构>>
 * [常见的数据结构](https://zhuanlan.zhihu.com/p/93928546)
+* [24张图彻底弄懂九大常见数据结构！](https://cloud.tencent.com/developer/article/1634155)
 
